# neurocat

./: .gitignore  .pdm-python  .readthedocs.yaml  README.md  README.rst  mkdocs.yml  pyproject.toml  requirements.txt
docs/: Makefile
docs/bak/: mkdocs.yml
docs/bak/api/: color.md  io.md  plotting.md  transfer.md  util.md
docs/bak/bak/: Makefile
docs/bak/bak/source_en/: conf.py
docs/source/: api.rst  conf.py  installation.rst  plotting.ipynb  requirements.txt  usage.rst
docs/source/auto_examples/: index.rst  searchindex.db
docs/source/user_guide/: color.rst  io.rst  plotting.rst  transfer.rst
site/: 404.html  index.html  objects.inv
site/api/atlas/: index.html
site/api/color/: index.html
site/api/io/: index.html
site/api/plotting/: index.html
site/api/transfer/: index.html
site/api/util/: index.html
site/bak/source_en/: Installation.rst
site/bak/source_en/_static/js/: switcher.js
site/bak/source_zh/: conf.py
site/search/: search_index.json
src/neurocat/: __init__.py  atlas.toml  between_system_tv.py  color.py  color.yml  fslr.toml  io.py  plotting.py  transfer.py  util.py
src/neurocat/S1200/fslr_vertex/: density_info.csv  fslr-164k_mw.npy  fslr-32k_mw.npy  fslr-4k_mw.npy  fslr-8k_mw.npy
src/neurocat/atlas/: atlas.csv
src/neurocat/atlas/Yeo2011/: sf_value.npy
src/neurocat/atlas/tian2020/: tian_lh.vtk  tian_lh_smooth.vtk  tian_rh.vtk  tian_rh_smooth.vtk
src/neurocat/deprecated/: atlas.py
src/neurocat/tf/tpl-fsLR/: template_description.json  tpl-fsLR_hemi-R_den-164k_sphere.surf.gii
tests/: draw.py  indvar_6gp.mat
